# nodeeditor

./: .gitignore  CMakeLists.txt
cmake/: NodeEditorConfig.cmake.in
examples/: CMakeLists.txt
examples/calculator/: AdditionModel.hpp
examples/fxflow/: AlphaBlendEffectDataModel.cpp  AlphaBlendEffectDataModel.hpp  BlurEffectDataModel.cpp  BlurEffectDataModel.hpp  CMakeLists.txt  EffectNodeView.cpp  EffectNodeView.hpp  ImageDisplayDataModel.cpp  ImageDisplayDataModel.hpp  ImageEffectDataModel.cpp  ImageEffectDataModel.hpp  ImageSourceDataModel.cpp  ImageSourceDataModel.hpp  ImageView.cpp  ImageView.hpp  MainWindow.cpp  MainWindow.h  NodeUIView.cpp  NodeUIView.hpp  PixmapData.hpp  main.cpp  mainwindow.ui
examples/fxflow/resources/: Style.json  fxflow.qrc
examples/styles/: main.cpp
include/nodes/internal/: Connection.hpp  ConnectionGeometry.hpp  ConnectionStyle.hpp  FlowScene.hpp  FlowViewStyle.hpp  NodeDataModel.hpp  NodeStyle.hpp  Style.hpp  StyleCollection.hpp
resources/: DefaultStyle.json
src/: Connection.cpp  ConnectionGeometry.cpp  ConnectionPainter.cpp  ConnectionStyle.cpp  FlowScene.cpp  NodeConnectionInteraction.cpp  NodeDataModel.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodePainter.hpp  NodeStyle.cpp  StyleCollection.cpp
test/: CMakeLists.txt
test/src/: TestNodeGraphicsObject.cpp
